--- a/dcie-project/css/style.css
+++ b/dcie-project/css/style.css
@@ -18,7 +18,7 @@ body
   transform: translate(-50% , -50%);
   top: 50%;
   left:50%;
-  background: #fff;
+  background: #ffff;
   box-shadow: 0 15px 35px rgba(50, 50, 50, 0.2);
   border-radius: 8px;
   display: flex;
